<resources>
    <string name="app_name">IIUM Car Rental</string>
    <string name="add">Add</string>
    <string name="add_car">Add car</string>
    <string name="accept">Accept</string>
    <string name="booking">Booking</string>
    <string name="cancel_booking">Cancel booking</string>
    <string name="car">Car</string>
    <string name="user">User</string>
    <string name="already_hv_acct">Already have an account? Log in</string>
    <string name="book">Book</string>
    <string name="booking_ID">Booking ID</string>
    <string name="booking_textview">You have 1 booking</string>
    <string name="booking_time">Booking time</string>
    <string name="cancel">Cancel</string>
    <string name="car_brand">Brand</string>
    <string name="car_id">Car ID</string>
    <string name="car_model">Model</string>
    <string name="car_name">Name</string>
    <string name="car_textview">You owned 3 cars</string>
    <string name="car_transmission">Transmission</string>
    <string name="car_type">Car type</string>
    <string name="confirm_booking">Confirm booking</string>
    <string name="description">Description 1: TBD\nDescription 2: TBD\nDescription 3: TBD</string>
    <string name="edit">Edit</string>
    <string name="edit_car">Edit car details</string>
    <string name="edit_profile">Edit my profile</string>
    <string name="first_name">First name</string>
    <string name="form">Form</string>
    <string name="home">Home</string>
    <string name="ignore">Ignore</string>
    <string name="last_name">Last name</string>
    <string name="list_viewer">List viewer</string>
    <string name="login">Log In</string>
    <string name="no_account_yet">No account yet? Sign up</string>
    <string name="notification1">OWNER1 promotes CAR1</string>
    <string name="notification2">You promotes CAR1. RENTER1 booked CAR1</string>
    <string name="password">Password</string>
    <string name="phone_num">Phone number</string>
    <string name="price">Price</string>
    <string name="price_perhour">RM/hour</string>
    <string name="price_perhalfday">RM/half day</string>
    <string name="price_perday">RM/day</string>
    <string name="promote_car">Promote my car</string>
    <string name="reconfirm_password">Reconfirm password</string>
    <string name="reject">Reject</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_textview">Search among 255 community of 500 cars</string>
    <string name="signup">Sign Up</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="view_booking">View booking</string>
    <string name="view_car">View car</string>
    <string name="view_profile">View profile</string>
    <string name="view_booking_list">View my booking</string>
    <string name="view_car_list">View my car</string>
    <string name="view_my_profile">View my profile</string>
    <string name="viewer">Viewer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity2_add_user">Activity2AddUser</string>
    <string name="title_activity_activity1_home">Activity1Home</string>
    <string name="title_activity_activity3_add_car">Activity3AddCar</string>
    <string name="title_activity_activity3_booking">Activity3Booking</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
