<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Activity2Add">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_above="@+id/confirm_button"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/car_name_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/car_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <!-- Car brand input -->
            <EditText
                android:id="@+id/input_car_brand"
                android:inputType="textCapWords"
                android:hint="@string/car_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/car_name_textView"/>

            <!-- Car model input -->
            <EditText
                android:id="@+id/input_car_model"
                android:inputType="textCapWords"
                android:hint="@string/car_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/input_car_brand"/>

            <TextView
                android:id="@+id/car_transmission_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/car_transmission"
                android:layout_below="@+id/input_car_model"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <!-- Car transmission spinner -->
            <Spinner
                android:id="@+id/car_transmission_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/car_transmission_textView"
                android:drawableStart="@drawable/truck"
                android:drawableLeft="@drawable/truck"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <TextView
                android:id="@+id/car_price_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/price"
                android:layout_below="@+id/car_transmission_spinner"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <!-- Price per hour input -->
            <EditText android:id="@+id/input_price_perhour"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:hint="@string/price_perhour"
                      android:layout_below="@+id/car_price_textView"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>

            <!-- Price per half day input -->
            <EditText android:id="@+id/input_price_perhalfday"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:hint="@string/price_perhalfday"
                      android:layout_below="@+id/input_price_perhour"
                      android:layout_alignParentLeft="true"
                      android:layout_alignParentStart="true"/>

            <!-- Price per day input -->
            <EditText android:id="@+id/input_price_perday"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="number"
                      android:hint="@string/price_perday"
                      android:layout_below="@+id/input_price_perhalfday"
                      android:layout_alignParentRight="true"
                      android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </ScrollView>

    <!-- Confirm button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:textAllCaps="false"
        android:background="@color/orange_500"
        android:clickable="true"
        android:onClick="onConfirmButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
