<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Activity0SignUp">

    <!-- Logo image -->
    <ImageView
        android:src="@drawable/iium_car_rental_wording"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_above="@+id/input_phone_no"
        android:layout_alignParentTop="true"/>

    <!-- Phone no input -->
    <EditText android:id="@+id/input_phone_no"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="phone"
                  android:hint="@string/phone_num"
                  android:layout_centerVertical="true"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentStart="true"/>

    <!-- Password input -->
    <EditText android:id="@+id/input_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/password"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_phone_no"
              android:layout_alignParentLeft="true"/>

    <!-- Password input -->
    <EditText android:id="@+id/input_password_confirm"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/reconfirm_password"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_password"
              android:layout_alignParentLeft="true"/>

    <!-- First name input -->
    <EditText android:id="@+id/input_car_brand"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:hint="@string/first_name"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_password_confirm"
              android:layout_alignParentLeft="true"
              android:layout_alignRight="@+id/input_last_name"
              android:layout_alignEnd="@+id/input_last_name"/>

    <!-- Last name input -->
    <EditText android:id="@+id/input_last_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:hint="@string/last_name"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_car_brand"
              android:layout_alignParentLeft="true"/>

    <!-- Signup button -->
    <Button android:id="@+id/button_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:onClick="onSignUpClick"
        android:background="@color/orange_500"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/input_last_name"/>

    <!-- Login link -->
    <TextView android:id="@+id/link_login"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/already_hv_acct"
              android:clickable="true"
              android:onClick="logIn"
              android:gravity="center"
              android:layout_alignParentBottom="true"
              android:layout_alignParentRight="true"
              android:layout_alignParentEnd="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

</RelativeLayout>
