<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".Activity2Edit">

    <!-- Logo image -->
    <ImageView
        android:src="@drawable/user"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_above="@+id/input_phone_no"
        android:layout_alignParentTop="true"/>

    <!-- Phone no input -->
    <EditText android:id="@+id/input_phone_no"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:hint="@string/phone_num"
              android:layout_centerVertical="true"
              android:layout_alignParentLeft="true"
              android:layout_alignParentStart="true"/>

    <!-- First name input -->
    <EditText android:id="@+id/input_first_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:hint="@string/first_name"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_password"
              android:layout_alignParentLeft="true"/>

    <!-- Last name input -->
    <EditText android:id="@+id/input_last_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              android:hint="@string/last_name"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_first_name"
              android:layout_alignParentLeft="true"/>

    <!-- Password input -->
    <EditText android:id="@+id/input_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/password"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/input_phone_no"
              android:layout_alignParentLeft="true"/>


    <!-- Dummy confirm button -->
    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/orange_500"
        android:text="@string/add_car"
        android:textAllCaps="false"
        android:clickable="true"
        android:onClick="onConfirmButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
